welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:84: error: Unmatched closing brace '}' ignored here
}
^