welcome.lessons.welcome.methods.picture.PictureMono3.scala.code
override def run() {
	def likeABoss() {
	def marquer() {
		baisseBrosse();
		leveBrosse();
	}
	def deux() {
		avance();
		marquer();
		avance();
		avance();
		marquer();
		avance();
	}
	def trois() {
		marquer();
		avance();
		avance();
		marquer();
		avance();
		avance();
		marquer();
	}
	def motif() {
		deux();
		gauche();
		avance();
		gauche();
		trois();
		droite();
		avance();
		droite();
		deux();
		gauche();
		avance();
		gauche();
		trois();
		droite();
		avance();
		droite();
		deux();
	}
	def place1() {
		droite();
		avance();
		avance();
		avance();
		avance();
		gauche();
		avance();

	}
	def place2() {
		gauche();
		avance();
		gauche();
		for (k<- 1 to 44) {
			avance();
		}
		retourne();
	}
	for (i<-1 to 9) {
		for (j<- 1 to 9) {
			motif();
			if (j!=9){
				place1();
			} else if (i!=9) {
				place2();
			}
		}
	}
	droite();
	for (j<- 1 to 44) {
		avance();
	}
	gauche();
	avance();
	}
	likeABoss();
}
}
